--- a/src/components/home_page.css
+++ b/src/components/home_page.css
@@ -1,63 +1,91 @@
 .circle_logo {
-    align-items: center;
-    justify-content: center;
-    width: 70px; /* Adjust outer circle width */
-    height: 70px; /* Adjust outer circle height */
-    border-radius: 50%;
-    border: 1px solid black; /* Set border color and width */
-    background: red;
-    margin-top: 30px;
-    margin-left: 90px;
-    position: relative; /* Needed for positioning inner circle */
+  align-items: center;
+  justify-content: center;
+  width: 70px; /* Adjust outer circle width */
+  height: 70px; /* Adjust outer circle height */
+  border-radius: 50%;
+  border: 1px solid black; /* Set border color and width */
+  background: red;
+  margin-top: 30px;
+  margin-left: 90px;
+  position: relative; /* Needed for positioning inner circle */
 }
 
 .inner_circle {
-    width: 70px; /* Adjust inner circle width */
-    height: 70px; /* Adjust inner circle height */
-    border-radius: 50%;
-    background: blue; /* Change inner circle background color */
-    position: absolute;
-    top: 50%;
-    left: 50%;
-    transform: translate(-50%, -50%);
+  width: 70px; /* Adjust inner circle width */
+  height: 70px; /* Adjust inner circle height */
+  border-radius: 50%;
+  background: blue; /* Change inner circle background color */
+  position: absolute;
+  top: 50%;
+  left: 50%;
+  transform: translate(-50%, -50%);
 }
 
 .logo_image {
-    width: 70px; /* Adjust logo image size */
-    height: 70px; /* Adjust logo image size */
-    border-radius: 50%;
-    object-fit: cover; /* Preserve aspect ratio and cover the entire circle */
-    position: absolute;
-    top: 50%;
-    left: 50%;
-    transform: translate(-50%, -50%);
+  width: 70px; /* Adjust logo image size */
+  height: 70px; /* Adjust logo image size */
+  border-radius: 50%;
+  object-fit: cover; /* Preserve aspect ratio and cover the entire circle */
+  position: absolute;
+  top: 50%;
+  left: 50%;
+  transform: translate(-50%, -50%);
 }
 
-.app_name{
-    margin-right: 70px;
-    margin-top: 10px;
-    font-size: 24px;
-    font-weight: bold;
+.app_name {
+  margin-right: 90px;
+  margin-top: 10px;
+  font-size: 30px;
+  font-weight: bold;
 }
 
 .app_name > div:last-child {
-    margin-left: 60px; /* Adjust the margin-top value as needed */
+  margin-left: 60px; /* Adjust the margin-top value as needed */
 }
 
 .home_button {
-    border: none;
-    background: none;
-    cursor: pointer;
-    display: flex;
-    align-items: center;
-    justify-content: center;
-  }
-  
-  .home_button span {
-    margin-left: 5px; /* Adjust spacing between icon and text */
-  }
-  
+  border: none;
+  background: none;
+  cursor: pointer;
+  display: flex;
+  /* align-items: center; */
+  justify-content: left;
+  font-size: 24px;
+  margin-left: 20px;
+  margin-top: 20px;
+}
 
-.column{
-    background-color: bisque;
+.home_button_space {
+  border: none;
+  background: none;
+  cursor: pointer;
+  display: flex;
+  align-items: center;
+  justify-content: left;
+  font-size: 24px;
+  margin-left: 20px;
+  margin-top: 10px;
+}
+
+.home_button span {
+  margin-left: 7px; /* Adjust spacing between icon and text */
+}
+.home_button_space span {
+  margin-left: 10px; /* Adjust spacing between icon and text */
+}
+.home_adj{
+  margin-top: 0px;
+}
+
+.home_button {
+  text-decoration: none; /* Remove underline */
+}
+
+.home_button_space {
+  text-decoration: none; /* Remove underline */
+}
+
+.column {
+  background-color: bisque;
 }
