--- a/src/components/sidebar.css
+++ b/src/components/sidebar.css
@@ -1,53 +1,317 @@
-.sidebar{
-    color: #fff;
-    background: black;
-  }
+.nav_main{
+  position: relative;
+  z-index: 10000;
   
-  .logo{
-    display: flex;
-    align-items: center;
-    justify-content: center;
-    color: #fff;
-    padding: 10px;
-  }
-  .logo-icon{
-    width: 40px;
-    height: 40px;
-    display: flex;
-    align-items: center;
-    justify-content: center;
-    font-size: 1.5rem;
-    border-radius: 50% ;
-    background: rgba(28,17,41,0.88);
-  }
-  
-  .menu-bar{
-     height: 695px;
-     margin-top: 2rem;
-     display: flex;
-     flex-direction: column;
-     gap: 15px;
-     font-size: 1rem;
-     position: relative;
-  }
-  
-  .toggle-theme-btn{
-    position: absolute;
-    bottom: 30px;
-    left: 20px;
-    display: flex;
-    align-items: center;
-    justify-content: center;
-    font-size: 1rem;
-  }
-  
-  .toggle{
-    margin-left: 15px;
-    
-  }
 
-  .header{
-    background: #fff;
-  }
-  
-  
+}
+
+.circle_logo {
+  align-items: center;
+  justify-content: center;
+  width: 70px; /* Adjust outer circle width */
+  height: 70px; /* Adjust outer circle height */
+  border-radius: 50%;
+  border: 1px solid black; /* Set border color and width */
+  background: 
+  red;
+  margin-top: 30px;
+  margin-left: 90px;
+  position: relative; /* Needed for positioning inner circle */
+}
+
+.circle_logo_profile {
+  align-items: center;
+  justify-content: center;
+  width: 47px; /* Adjust outer circle width */
+  height: 47px; /* Adjust outer circle height */
+  border-radius: 50%;
+  border: 1px solid black; /* Set border color and width */
+  background: red;
+  margin-top: 120px;
+  margin-left: 50px;
+  position: relative; /* Needed for positioning inner circle */
+}
+
+.inner_circle {
+  width: 70px; /* Adjust inner circle width */
+  height: 70px; /* Adjust inner circle height */
+  border-radius: 50%;
+  background: blue; /* Change inner circle background color */
+  position: absolute;
+  top: 50%;
+  left: 50%;
+  transform: translate(-50%, -50%);
+}
+
+.inner_circle_profile {
+  width: 47px; /* Adjust inner circle width */
+  height: 47px; /* Adjust inner circle height */
+  border-radius: 50%;
+  background: blue; /* Change inner circle background color */
+  position: absolute;
+  top: 50%;
+  left: 50%;
+  transform: translate(-50%, -50%);
+}
+
+.logo_image {
+  width: 70px; /* Adjust logo image size */
+  height: 70px; /* Adjust logo image size */
+  border-radius: 50%;
+  object-fit: cover; /* Preserve aspect ratio and cover the entire circle */
+  position: absolute;
+  top: 50%;
+  left: 50%;
+  transform: translate(-50%, -50%);
+}
+
+.logo_image_profile {
+  width: 47px; /* Adjust logo image size */
+  height: 47px; /* Adjust logo image size */
+  border-radius: 50%;
+  object-fit: cover; /* Preserve aspect ratio and cover the entire circle */
+  position: absolute;
+  top: 50%;
+  left: 50%;
+  transform: translate(-50%, -50%);
+}
+
+.app_name {
+  margin-right: 90px;
+  margin-top: 10px;
+  font-size: 30px;
+  font-weight: bold;
+}
+
+.app_name > div:last-child {
+  margin-left: 60px; /* Adjust the margin-top value as needed */
+}
+
+.home_button {
+  border: none;
+  background: none;
+  cursor: pointer;
+  display: flex;
+  /* align-items: center; */
+  justify-content: left;
+  font-size: 24px;
+  margin-left: 20px;
+  margin-top: 20px;
+}
+
+.home_button_space {
+  border: none;
+  background: none;
+  cursor: pointer;
+  display: flex;
+  align-items: center;
+  justify-content: left;
+  font-size: 24px;
+  margin-left: 20px;
+  margin-top: 10px;
+}
+.home_button_spaceB {
+  border: none;
+  background: none;
+  cursor: pointer;
+  display: flex;
+  align-items: center;
+  justify-content: left;
+  font-size: 24px;
+  margin-left: 20px;
+  margin-top: 10px;
+}
+
+.home_button_spaceU {
+  border: none;
+  background: none;
+  cursor: pointer;
+  display: flex;
+  align-items: center;
+  justify-content: left;
+  font-size: 24px;
+  margin-left: 20px;
+  margin-top: 10px;
+}
+
+.home_button_spaceP {
+  border: none;
+  background: none;
+  cursor: pointer;
+  display: flex;
+  align-items: center;
+  justify-content: left;
+  font-size: 24px;
+  margin-left: 20px;
+  margin-top: 10px;
+}
+
+.home_button_spaceR {
+  border: none;
+  background: none;
+  cursor: pointer;
+  display: flex;
+  align-items: center;
+  justify-content: left;
+  font-size: 24px;
+  margin-left: 20px;
+  margin-top: 10px;
+}
+
+.home_button_spaceN {
+  border: none;
+  background: none;
+  cursor: pointer;
+  display: flex;
+  align-items: center;
+  justify-content: left;
+  font-size: 24px;
+  margin-left: 20px;
+  margin-top: 10px;
+}
+.home_button_spaceF {
+  border: none;
+  background: none;
+  cursor: pointer;
+  display: flex;
+  align-items: center;
+  justify-content: left;
+  font-size: 24px;
+  margin-left: 20px;
+  margin-top: 10px;
+}
+
+.home_button_spaceM {
+  border: none;
+  background: none;
+  cursor: pointer;
+  display: flex;
+  align-items: center;
+  justify-content: left;
+  font-size: 24px;
+  margin-left: 20px;
+  margin-top: 10px;
+}
+
+.home_button_spaceC {
+  border: none;
+  background: none;
+  cursor: pointer;
+  display: flex;
+  align-items: center;
+  justify-content: left;
+  font-size: 24px;
+  margin-left: 20px;
+  margin-top: 10px;
+}
+
+.home_button span {
+  margin-left: 12px; /* Adjust spacing between icon and text */
+}
+.home_button_spaceB span {
+  margin-left: 9px; /* Adjust spacing between icon and text */
+}
+
+.home_button_spaceU span {
+  margin-left: 18px; /* Adjust spacing between icon and text */
+}
+.home_button_spaceP span {
+  margin-left: 21px; /* Adjust spacing between icon and text */
+}
+.home_button_spaceR span {
+  margin-left: 18px; /* Adjust spacing between icon and text */
+}
+.home_button_spaceN span {
+  margin-left: 18px; /* Adjust spacing between icon and text */
+}
+
+.home_button_spaceF span {
+  margin-left: 9px; /* Adjust spacing between icon and text */
+}
+
+.home_button_spaceM span {
+  margin-left: 15px; /* Adjust spacing between icon and text */
+}
+.home_button_spaceC span {
+  margin-left: 16px; /* Adjust spacing between icon and text */
+}
+
+.home_adj {
+  margin-top: 0px;
+}
+
+.home_button {
+  text-decoration: none; /* Remove underline */
+}
+
+.home_button_space {
+  text-decoration: none; /* Remove underline */
+}
+.home_button_spaceB {
+  text-decoration: none; /* Remove underline */
+}
+
+.home_button_spaceU {
+  text-decoration: none; /* Remove underline */
+}
+
+.home_button_spaceP {
+  text-decoration: none; /* Remove underline */
+}
+.home_button_spaceR {
+  text-decoration: none; /* Remove underline */
+}
+
+.home_button_spaceN {
+  text-decoration: none; /* Remove underline */
+}
+.home_button_spaceF {
+  text-decoration: none; /* Remove underline */
+}
+
+.home_button_spaceM {
+  text-decoration: none; /* Remove underline */
+}
+.home_button_spaceC {
+  text-decoration: none; /* Remove underline */
+}
+
+.column {
+  background-color: #effaff;
+}
+
+.profile_name {
+  margin-bottom: 20px;
+  margin-top: 130px;
+  margin-left: 40px;
+  align-items: center;
+  text-align: left;
+}
+
+.Dashboard {
+  align-items: center;
+  text-align: left;
+  margin-left: 30px;
+  margin-top: 30px;
+  font-weight: bold;
+  font-size: 24px;
+}
+
+.dot{
+  margin-top: 10px;
+}
+
+.Location {
+  text-decoration: none; /* Remove underline */
+}
+.Location {
+  border: none;
+  background: none;
+  cursor: pointer;
+  display: flex;
+  align-items: center;
+  justify-content: left;
+  font-size: 24px;
+  margin-left: 30px;
+  margin-top: 10px;
+}
