--- a/src/components/login_page.css
+++ b/src/components/login_page.css
@@ -23,6 +23,9 @@
   .gap{
     margin-top: 40px;
   }
+  .login {
+    text-decoration: none; /* Remove underline */
+  }
   .gap1{
     margin-top: 40px;
   }
