--- a/src/pages/Home.css
+++ b/src/pages/Home.css
@@ -77,3 +77,21 @@
     width: 220px; /* Adjust width as needed */
     height: 120px;
   }
+
+   .table th {
+    padding-bottom: 10px;
+    padding-right: 200px; /* Adjust this value to change the amount of space */
+  }
+
+  .table thead th {
+    background-color: #E1F3FC; /* Set the background color here */
+  }
+  .table {
+    margin-top: 30px;
+    margin-left: 40px;
+    font-size: 18px;
+  }
+  .table tbody tr:nth-child(even){
+    background-color: #fff; /* Set the background color for even rows */
+    border-bottom: 5px solid black;
+  }
