--- a/src/pages/Home.css
+++ b/src/pages/Home.css
@@ -123,7 +123,7 @@
 
   .current_User{
     font-size: 24px;
-    margin-left: 25px;
+    margin-left: 30px;
     margin-top: 25px;
   }
 
@@ -135,3 +135,21 @@
     background-size: cover; /* Ensure the image covers the entire circle */
   }
   
+  .search-rectangle{
+    height: 20px;
+    width: 50px;
+
+  }
+
+  .Search_User{
+    padding: 10px;
+    background-color: #fff;
+    border-color: black;
+    height: 20px;
+    width: 150px;
+    margin-top: 25px;
+    border-width: 20px;
+    border: 1px solid black;
+    border-radius: 5px;
+    margin-left: 950px;
+  }
